<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.ezcart.presentation.splash.SplashFragment"
        android:label="SplashFragment">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ezcart.presentation.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_home_graph"
            app:destination="@id/home_graph"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.ezcart.presentation.registration.RegistrationFragment"
        android:label="RegistrationFragment">

        <action
            android:id="@+id/action_registrationFragment_to_loginFragment2"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registrationFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <include app:graph="@navigation/home_graph" />
</navigation>